--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
+        "declaration": true,
         "declarationDir": "build",
         "outDir": "build"
     },
     "exclude": ["node_modules"],
-    "extends": "@esportsplus/rspack/tsconfig.base.json",
+    "extends": "./node_modules/@esportsplus/typescript/tsconfig.base.json",
     "include": ["src"]
 }
