fix: tsconfig changes, replace npm with pnpm

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "ICJR",
     "description": "Web worker pool",
     "devDependencies": {
-        "@esportsplus/typescript": "^0.6.3"
+        "@esportsplus/typescript": "^0.8.11"
     },
     "main": "./build/index.js",
     "name": "@esportsplus/workers",
@@ -10,9 +10,10 @@
     "scripts": {
         "build": "tsc && tsc-alias",
         "-": "-",
-        "prepare": "npm run build",
-        "prepublishOnly": "npm run build"
+        "prepare": "pnpm build",
+        "prepublishOnly": "pnpm build"
     },
+    "type": "module",
     "types": "./build/index.d.ts",
     "version": "0.0.14"
 }
