--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "main": "./build/index.js",
     "name": "@esportsplus/workers",
     "private": false,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/esportsplus/workers"
+    },
     "scripts": {
         "build": "tsc && tsc-alias",
         "-": "-",
