--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "author": "ICJR",
+    "dependencies": {
+        "@esportsplus/queue": "^0.2.0",
+        "msgpackr": "^1.11.5"
+    },
     "description": "Web worker pool",
     "devDependencies": {
-        "@esportsplus/typescript": "^0.9.2"
+        "@esportsplus/typescript": "^0.10.2",
+        "@types/node": "^25.0.1"
     },
     "main": "./build/index.js",
     "name": "@esportsplus/workers",
